# SecreIA

./: .gitignore  =1.26.0  =3.0.0  README.md  build_mac.sh  build_signed.sh  pyproject.toml  requirements.txt  run_app.py
app/: ai.py  audio.py  db.py  main.py  settings.py  vectorstore.py
app/assets/: README.txt
appwindows/: build_windows.bat  requirements_windows.txt
appwindows/app/: ai.py  audio.py  db.py  main.py  settings.py
assets/: icon.icns
